--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@ryanforever/ngrok",
-  "version": "1.0.5",
+  "version": "1.0.1",
   "description": "ngrok wrapper",
   "main": "index.js",
   "scripts": {
     "test": "node test.js",
-    "publish": "npm i && npm version patch --no-git-tag-version && npm i && git add --all && git commit -m 'auto-build via npm' && git push origin --all && npm publish"
+    "build": "npm i && npm version patch --no-git-tag-version && npm i && git add --all && git commit -m 'auto-build via npm' && git push origin --all && npm publish"
   },
   "author": "ryan forever",
   "license": "ISC",
